--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
     --media-bg: linear-gradient(180deg, #4D21C9 0%, rgba(37, 33, 201, 0.00) 100%,  rgba(37, 33, 201, 0.00) 100%);
     --white:#FFF;
     --light-blue: #CAC9FF;
+    --dark-navy:#303B59;
+    --resumo-div-bg: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.95) 100%);
+    --reacao-bg:#FF5555;
+    --memoria-bg: #FFB21E;
+    --verbal-bg: #00BB8F;
+    --visual-bg:#1125D6;
 }
 body {
     font-size: 1.6rem;
@@ -35,7 +41,7 @@ body {
     border-radius: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; 
     margin-bottom: 2.4rem;
 }
 .resultado div strong:nth-of-type(1){
@@ -52,8 +58,45 @@ body {
    margin-bottom: 1rem; 
 
 }
-.resultado p{
+.resultado p {
     max-width: 26rem;
     margin-inline: auto;
     color: var(--light-blue);
+}
+.resumo {
+    padding: 2.4rem 3.2rem;
+}
+.resumo h2 {
+    color: var(--dark-navy);
+    font-size: 1.8rem;
+    margin-bottom: 2.5rem;
+}
+.resumo > div {
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ padding: 1.6rem;
+ border-radius: 1.2rem;
+ margin-bottom: 1.6rem;
+}
+.resumo >div div {
+ display: flex;
+ align-items: center;
+ gap: 1.2rem;
+}
+.resumo_reacao{
+background: var(--reacao-bg) var(--resumo-div-bg);
+color: var(--reacao-bg);
+}
+.resumo_memoria{
+    background: var(--memoria-bg) var(--resumo-div-bg);
+   color: var(--memoria-bg);
+}
+.resumo_verbal{
+    background: var(--verbal-bg) var(--resumo-div-bg);
+    color: var(--verbal-bg);
+}
+.resumo_visual{
+    background: var(--visual-bg) var(--resumo-div-bg);
+    color: var(--visual-bg);
 }
